--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
     "next": "10.0.1",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
-    "typescript": "^4.0.5",
-    "@types/mongoose": "^5.7.37"
+    "typescript": "^4.0.5"
   }
 }
